--- a/src/app/components/units-card/units-card.component.scss
+++ b/src/app/components/units-card/units-card.component.scss
@@ -6,13 +6,28 @@
   border-radius: 5px;
   overflow: hidden;
 
-  .person-name {
+  .unit-name {
+    display: block;
+    font-size: 16px;
+    text-align: right;
+  }
+
+  .unit-status {
     display: block;
     font-size: 16px;
     text-align: left;
   }
 
-  .person-roles {
+  .unit-roles {
+    display: block;
+    font-size: 12px;
+    white-space: nowrap;
+    overflow: hidden;
+    color: gray;
+    text-align: right;
+  }
+
+  .unit-statusheader {
     display: block;
     font-size: 12px;
     white-space: nowrap;
@@ -21,16 +36,16 @@
     text-align: left;
   }
 
-  .person-group {
+  .unit-group {
     display: block;
     font-size: 14px;
-    text-align: left;
+    text-align: right;
   }
 
   .date-time {
     font-size: 12px;
     display: block;
-    text-align: right;
+    text-align: left;
     color: var(--ion-color-primary);
   }
 }
